Prevent board cells from wrapping when window is resized

--- a/src/App.sass
+++ b/src/App.sass
@@ -12,6 +12,7 @@
 	border: 1px solid black
 	text-align: center
 	display: inline
+	white-space: nowrap
 
 #board-cell
 	display: inline
